Check transport mode when mapping GroupStops